Add Recitation 2 information

--- a/index.html
+++ b/index.html
@@ -18,11 +18,28 @@
                     <tr>
                         <td id="nav" valign="top"></td>
                         <td valign="top">
+<h3>01/25/11: C, System Calls, and You</h3>
+<p>
+The second recitation covers some
+<a href="https://github.com/cwru-eecs338/c_basics">basics about the C
+programming</a> language that you might not have learned (or have forgotten
+since you took <i>Compilers</i>). This semester, you can use Java for your
+assignments, but C is recommended.
+</p>
+<p>
+In addition to C basics, various system calls are reviewed, with examples of
+<a href="https://github.com/cwru-eecs338/organization_example">fork</a> and the
+<a href="https://github.com/cwru-eecs338/syscall_examples">environment variable calls</a>.
+</p>
+<p>
+The recitation slides are available
+<a href="slides/C_and_System_Calls.pdf">here</a>, or from the
+<a href="slides.html">slides page</a>.
 <h3>01/17/11: First Recitation</h3>
 <p>An <a href="intro.html">introduction to Linux</a>, which will be used for the programming assignments.</p>
                             <h3>Summary</h3>
                             <p>
-This site will be updated with materials for the course during the semeseter.
+This site will be updated with materials for the course during the semester.
 Currently, any code will be hosted at <a href="https://github.com/cwru-eecs338">GitHub</a>
 for easy access.
                             </p>
