--- a/resources.html
+++ b/resources.html
@@ -23,6 +23,13 @@
 <dd>Free, open source virtual machine software, if you want to try a new OS (e.g. Linux) without partitioning or replacing your current OS.</dd>
 <dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a href="http://goto.case.edu/">CWRU Hacker Society</a></dt>
 <dd>Campus organizations that feature tech talks and events (including OS&#8211;related topics).</dd>
+<dt><a href="http://library.case.edu">Kelvin Smith Library</a></dt>
+<dd>Hard and electronic copies of useful C and Unix programming resources (may require <a href="https://vpnsetup.case.edu/">VPN</a> to access), such as:
+  <ul>
+  <li><a href="http://proquest.safaribooksonline.com/book/operating-systems-and-server-administration/linux/0130460427">Interprocess Communications in Linux</a></li>
+  <li><a href="http://proquest.safaribooksonline.com/0321287630">C Programming</a></li>
+  </ul>
+</dd>
 </dl>
                         </td>
                     </tr>
