Update Unix Lab server information

--- a/intro.html
+++ b/intro.html
@@ -29,21 +29,22 @@
 </ol>
                             <h3><a name="connecting">Connecting to a Unix Lab Computer</a></h3>
                             <p>
-After you set up an account with a Unix Lab Computer, you can use an ssh client
-to connect. SSH stands for <i>Secure Shell</i>, and opens an encrypted
+After your Unix lab account is created, you can use an ssh client
+to connect. SSH stands for <i>Secure SHell</i>, and opens an encrypted
 connection to a shell interface on a remote computer. From Mac OS X, you can
 connect using the command:
 
-<blockquote><code>ssh abc123@lechuck.case.edu</code></blockquote>
+<blockquote><code>ssh abc123@eecslinab.case.edu</code></blockquote>
 
 If you are using Windows, you will need to download the
 <a href="http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html">PuTTY</a>
-ssh client (or something similar). With PuTTY, you specify the host name (lechuck.case.edu) in the
+ssh client (or something similar). With PuTTY, you specify the host name (eecslinab.case.edu) in the
 appropriate field, and you will be prompted for a user name when you login.
                             </p>
                             <p>
 If you are prompted to accept certificates and trust that you are connecting
-to the correct machine, then say &#8220;yes.&#8221;
+to the correct machine, then say &#8220;yes.&#8221; The password should be your CWRU Single Sign&#8211;On
+password.
                             </p>
                             <h3><a name="commands">Basic Unix Commands</a></h3>
 <dl>
