Add note about ssh with Linux

--- a/intro.html
+++ b/intro.html
@@ -31,7 +31,7 @@
                             <p>
 After your Unix lab account is created, you can use an ssh client
 to connect. SSH stands for <i>Secure SHell</i>, and opens an encrypted
-connection to a shell interface on a remote computer. From Mac OS X, you can
+connection to a shell interface on a remote computer. From Mac OS X or Linux, you can
 connect using the command:
 
 <blockquote><code>ssh abc123@eecslinab.case.edu</code></blockquote>
