--- a/resources.html
+++ b/resources.html
@@ -19,17 +19,26 @@
                         <td id="nav" valign="top"></td>
                         <td valign="top">
 <dl>
-<dt><a href="http://www.virtualbox.org/">VirtualBox</a></dt>
-<dd>Free, open source virtual machine software, if you want to try a new OS (e.g. Linux) without partitioning or replacing your current OS.</dd>
-<dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a href="http://goto.case.edu/">CWRU Hacker Society</a></dt>
-<dd>Campus organizations that feature tech talks and events (including OS&#8211;related topics).</dd>
-<dt><a href="http://library.case.edu">Kelvin Smith Library</a></dt>
-<dd>Hard and electronic copies of useful C and Unix programming resources (may require <a href="https://vpnsetup.case.edu/">VPN</a> to access), such as:
-  <ul>
-  <li><a href="http://proquest.safaribooksonline.com/book/operating-systems-and-server-administration/linux/0130460427">Interprocess Communications in Linux</a></li>
-  <li><a href="http://proquest.safaribooksonline.com/0321287630">C Programming</a></li>
-  </ul>
-</dd>
+  <dt><a href="http://www.virtualbox.org/">VirtualBox</a></dt>
+  <dd>Free, open source virtual machine software, if you want to try a new OS (e.g. Linux) without partitioning or replacing your current OS.</dd>
+  <dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a href="http://goto.case.edu/">CWRU Hacker Society</a></dt>
+  <dd>Campus organizations that feature tech talks and events (including OS&#8211;related topics).</dd>
+  <dt><a href="http://library.case.edu">Kelvin Smith Library</a></dt>
+  <dd>Hard and electronic copies of useful C and Unix programming resources (may require <a href="https://vpnsetup.case.edu/">VPN</a> to access), such as:
+    <ul>
+    <li><a href="http://proquest.safaribooksonline.com/book/operating-systems-and-server-administration/linux/0130460427">Interprocess Communications in Linux</a></li>
+    <li><a href="http://proquest.safaribooksonline.com/0321287630">C Programming</a></li>
+    </ul>
+  </dd>
+  <dt><b>Tools</b></dt>
+  <dd><a href="http://www.vim.org/">Vim</a>
+    <ul>
+      <li><a href="http://www.viemu.com/a_vi_vim_graphical_cheat_sheet_tutorial.html">Cheat Sheets &amp; Tutorials</a> (recommended by Andrew Johnson)</li>
+      <li><a href="http://vimcasts.org/">Vimcasts</a> Screencasts demonstrating Vim features</li>
+    </ul>
+  </dd>
+  <dd><a href="http://www.gnu.org/software/gdb/">GNU Debugger (gdb)</a></dd>
+  <dd><a href="http://valgrind.org/">Valgrind</a> (Memory debugging tool)</dd>
 </dl>
                         </td>
                     </tr>
