Update with recitation 3 information

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                     <tr>
                         <td id="nav" valign="top"></td>
                         <td valign="top">
+<h3>02/01/11: Structs and Pipes</h3>
+<p>
+Examples of using <a href="https://github.com/cwru-eecs338/structs_getpwuid">structured types in C</a>, followed by an
+introduction to <a href="https://github.com/cwru-eecs338/mario_pipe">unnamed pipes</a>.
+</p>
 <h3>01/25/11: C, System Calls, and You</h3>
 <p>
 The second recitation covers some
