--- a/slides.html
+++ b/slides.html
@@ -26,6 +26,11 @@ memory allocation. Review of system calls such as <code>fork()</code>,
 <code>exec()</code>, <code>time()</code>, <code>putenv()</code>, and
 <code>getenv()</code>.
   </dd>
+  <dt><a href="http://vorlon.case.edu/~bml8/338S06/presentations/04Pipes.sxi.pdf">Pipes</a></dt>
+  <dd>
+    Introduction to programming with unnamed pipes. Slides by
+<a href="http://vorlon.case.edu/~bml8/338S06/">Brian Lauber</a>.
+  </dd>
 </dl>
 <hr />
                         <p>
