Updating Contact and Slides pages

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
                           <h3>Dan Savel</h3>
                           <dl>
                             <dt>Email:</dt><dd><a href="mailto:dxs221@case.edu">dxs221@case.edu</a></dd>
+			    <dt>Office Hours:</dt> <dd>Monday, 2:00 to 3:00 PM in Olin 406</dd>
                           </dl>
                         </td>
                     </tr>
