--- a/slides.html
+++ b/slides.html
@@ -41,7 +41,13 @@ memory allocation. Review of system calls such as <code>fork()</code>,
   <dt><a href="https://docs.google.com/present/view?id=dhr6rtvj_191d8bzwpgj">Monitors in Java</a></dt>
   <dd> Some slides I actually wrote:
   <iframe src="https://docs.google.com/present/embed?id=dhr6rtvj_191d8bzwpgj" frameborder="0" width="410" height="342"></iframe>
-  </dt>
+  </dd>
+  <dt><a href="https://docs.google.com/present/view?id=d37b66n_5c85qskgc">System V</a></dt>
+  <dd>Slides on using the professor's example code </dd>
+  
+  <dt><a href="https://docs.google.com/present/view?id=d37b66n_4d93jp2g5">POSIX </a></dt>
+  <dd>Slides on how to use POSIX Semaphores and POSIX Threads</dd>
+
 <hr />
                         <p>
 The slides for this recitation section are based off of presentations given by
