Updating Homepage with Java Notice

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                         <td id="nav" valign="top"></td>
                         <td valign="top">
 
+<h3>03/29/11: Java Threading</h3>
+<p>
+Java version of the Readers-Writers simulation is posted 
+<a href="https://github.com/cwru-eecs338/JavaThreader" >here</a>.
+</p>
 <h3>03/28/11: POSIX</h3>
 <p>
 Example using POSIX Semaphores and POSIX Threads Posted
