--- a/slides.html
+++ b/slides.html
@@ -48,6 +48,9 @@ memory allocation. Review of system calls such as <code>fork()</code>,
   <dt><a href="https://docs.google.com/present/view?id=d37b66n_4d93jp2g5">POSIX </a></dt>
   <dd>Slides on how to use POSIX Semaphores and POSIX Threads</dd>
 
+  <dt><a href="https://docs.google.com/present/view?id=d37b66n_7dwqwbfd7">RPC </a></dt>
+  <dd>Using RPC and a Simple Echo Example via RPC</dd>
+
 <hr />
                         <p>
 The slides for this recitation section are based off of presentations given by
