Some minor changes to intro page

--- a/intro.html
+++ b/intro.html
@@ -44,14 +44,14 @@ appropriate field, and you will be prompted for a user name when you login.
                             </p>
                             <p>
 If you are prompted to accept certificates and trust that you are connecting
-to the correct machine, then say &#8220;yes.&#8221; The password should be your CWRU Single Sign&#8211;On
+to the correct machine, then say &#8220;yes.&#8221; The password should be your CWRU Single Sign-On
 password.
                             </p>
                             <h3><a name="files"></a>Accessing Files on a Unix Lab Computer</h3>
 <p>
 If you use Windows, there is a program called
 <a href="http://winscp.net/eng/index.php">WinSCP</a> that will let you copy
-files from the lab computer to your machine (and vice versa). The login process
+files between the lab computer and your machine. The login process
 is similar to that for PuTTY.
 </p>
 <p>
@@ -118,10 +118,10 @@ below.
 
                           <h3><a name="screen">GNU Screen</a></h3>
                           <p>
-Screen is a powerful tool that lets you create multi&#8211;tabbed, detachable
+Screen is a powerful tool that lets you create multi-tabbed, detachable
 shell session on a remote computer. To use it, type the command:
 <blockquote><code>screen</code></blockquote>
-Now, you are in a shell session within a shell session (have you seen
+Now, you are in something like a shell session within a shell session (have you seen
 <i>Inception</i>?). You can be doing some work here (for example, editing some
 code). But what if you want to do something else, like test your program that
 runs for a while? You can use <code>ctrl+a c</code> to create a
@@ -154,7 +154,7 @@ And, now you can resume the work you started in the lab.
                           </p>
                           <p>
 As a final note, screen is also useful in case your ssh connection is dropped
-for some reason. You can log back in and reattach without losing any work.
+for whatever reason. You can log back in and reattach without losing any work.
                           </p>
 <h3><a name="editor">Using a Text Editor</a></h3>
 <p>
