Update pages for Spring 2012 Semester

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>EECS 338, Spring 2011: Contact Info</title>
+        <title>EECS 338, Spring 2012: Contact Info</title>
         <link href="base-style.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="nav.js"></script>
     </head>
@@ -21,12 +21,11 @@
                           <h3>Gary Doran</h3>
                           <dl>
                             <dt>Email:</dt><dd><a href="mailto:gbd6@case.edu">gbd6@case.edu</a></dd>
-                            <dt>Office Hours:</dt> <dd>Friday, 2:00 to 3:00 PM in Olin 406</dd>
+                            <dt>Office Hours:</dt> <dd>TBD</dd>
                           </dl>
-                          <h3>Dan Savel</h3>
+                          <h3>Tim Henderson</h3>
                           <dl>
-                            <dt>Email:</dt><dd><a href="mailto:dxs221@case.edu">dxs221@case.edu</a></dd>
-			    <dt>Office Hours:</dt> <dd>Monday, 2:00 to 3:00 PM in Olin 406</dd>
+			                      <dt>Office Hours:</dt> <dd>TBD</dd>
                           </dl>
                         </td>
                     </tr>
