Add office hours location

--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
                           <h3>Gary Doran</h3>
                           <dl>
                             <dt>Email:</dt><dd><a href="mailto:gbd6@case.edu">gbd6@case.edu</a></dd>
-                            <dt>Office Hours:</dt> <dd>Thursday 11:30&#8211;1:30</dd>
+                            <dt>Office Hours:</dt> <dd>Thursday 11:30&#8211;1:30, Olin 406</dd>
                           </dl>
                           <h3>Tim Henderson</h3>
                           <dl>
                             <dt>Email:</dt><dd><a href="mailto:tah35@case.edu">tah35@case.edu</a></dd>
                             <dt>Phone:</dt><dd>(614) 296-9964</dd>
-			                      <dt>Office Hours:</dt> <dd>Monday 2:00&#8211;4:00</dd>
+			                      <dt>Office Hours:</dt> <dd>Monday 2:00&#8211;4:00, Olin 406</dd>
                           </dl>
                         </td>
                     </tr>
