Add IRC link to contact information

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,8 @@
                             <dt>Phone:</dt><dd>(614) 296-9964</dd>
 			                      <dt>Office Hours:</dt> <dd>Monday 2:00&#8211;4:00, Olin 406</dd>
                           </dl>
+                          <h3>IRC</h3>
+                          <a href="http://widget.mibbit.com/?server=irc.case.edu&channel=%23eecs338">Check out the #eecs338 channel on irc.case.edu</a>.
                         </td>
                     </tr>
                 </table>
