Add details for second recitation

--- a/index.html
+++ b/index.html
@@ -49,26 +49,35 @@ Introduce API for semaphores in System V Unix, with delicious example code for t
 Examples of using <a href="https://github.com/cwru-eecs338/structs_getpwuid">structured types in C</a>, followed by an
 introduction to <a href="https://github.com/cwru-eecs338/mario_pipe">unnamed pipes</a>.
 </p>
-<h3>01/25/11: C, System Calls, and You</h3>
-<p>
-The second recitation covers some
-<a href="https://github.com/cwru-eecs338/c_basics">basics about the C
-programming</a> language that you might not have learned (or have forgotten
-since you took <i>Compilers</i>). This semester, you can use Java for your
-assignments, but C is recommended.
-</p>
-<p>
-In addition to C basics, various system calls are reviewed, with examples of
-<a href="https://github.com/cwru-eecs338/organization_example">fork</a> and the
-<a href="https://github.com/cwru-eecs338/syscall_examples">environment variable calls</a>.
-</p>
-<p>
-The recitation slides are available
-<a href="slides/C_and_System_Calls.pdf">here</a>, or from the
-<a href="slides.html">slides page</a>.
 -->
+<h3>01/31/12: System Calls</h3>
+<p>
+The second recitation will focus on system calls. First, we will discuss how they
+are implemented in the kernel, with
+<a href="https://github.com/cwru-eecs338/hello_syscalls">an example</a> of
+writing to standard out as a system call. Then, I will review an example of
+<a href="https://github.com/cwru-eecs338/fork_and_exec"><code>fork()</code> and
+<code>exec()</code></a>,
+which will be required for your first assignment.
+</p>
+<p>
+Other code examples from previous years describe
+<a href="https://github.com/cwru-eecs338/syscall_examples">environment variable</a>
+system calls, and
+<a href="https://github.com/cwru-eecs338/organization_example">how you can organize</a>
+a C program that consists of several files.
+</p>
+<p>
+Some slides are available <a href="slides/C_and_System_Calls.pdf">here</a>, or
+more generally, from the <a href="slides.html">slides page</a>.
+</p>
+
 <h3>01/24/12: First Recitation</h3>
-<p>An <a href="intro.html">introduction to Linux</a>, which will be used for the programming assignments.</p>
+<p>An <a href="intro.html">introduction to Linux</a>, which will be used for the
+programming assignments. I reviewed <a href="https://github.com/cwru-eecs338/hello338">a very simple C program</a>, and
+<a href="https://github.com/cwru-eecs338/c_basics">a description of some of the basics of C</a> for those of you used
+to Java.</p>
+
                             <h3>Summary</h3>
                             <p>
 This site will be updated with materials for the course during the semester.
