Add description of 2/14/12 recitation

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ Look at how monitors are implemented in Java, with example code for the
 Introduce API for shared memory in System V Unix, using the same example code for the 
  <a href="https://github.com/cwru-eecs338/semaphores">bounded buffer problem</a>.
 </p>
-<h3>02/08/11: System V Semaphores</h3>
+-->
+<h3>02/14/12: System V Semaphores</h3>
 <p>
-Introduce API for semaphores in System V Unix, with delicious example code for the
+Introduce API for semaphores in System V Unix, with example code for the
  <a href="https://github.com/cwru-eecs338/semaphores">bounded buffer problem</a>.
 </p>
--->
 <h3>02/07/12: Pipes</h3>
 <p>
 Today, we'll talk about named and unnamed pipes in Unix. First, I'll show how
