Update page for 2/21/12 recitation

--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@ Java version of the Readers-Writers simulation is posted
 Example using POSIX Semaphores and POSIX Threads Posted
 <a href="https://github.com/cwru-eecs338/PosixExample">here</a>.
 </p>
-<h3>02/22/11: Monitors in Java</h3>
+-->
+<h3>02/21/11: System V Shared Memory and Monitors in Java</h3>
 <p>
-Look at how monitors are implemented in Java, with example code for the 
+First, we'll review semaphores and introduce the API for shared memory in
+System V Unix, using the same example code for the
+<a href="https://github.com/cwru-eecs338/semaphores">bounded buffer problem</a>.
+Then, we'll look at how monitors are implemented in Java, with example code for the 
 <a href="https://github.com/cwru-eecs338/java_monitors">dining philosophers problem</a>.
 </p>
-<h3>02/15/11: System V Shared Memory</h3>
-<p>
-Introduce API for shared memory in System V Unix, using the same example code for the 
- <a href="https://github.com/cwru-eecs338/semaphores">bounded buffer problem</a>.
-</p>
--->
 <h3>02/14/12: System V Semaphores</h3>
 <p>
 Introduce API for semaphores in System V Unix, with example code for the
