Add summary of recitation for 02/28/12

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ Example using POSIX Semaphores and POSIX Threads Posted
 <a href="https://github.com/cwru-eecs338/PosixExample">here</a>.
 </p>
 -->
+<h3>02/28/11: System V Message Queues and Semaphore Review</h3>
+<p>
+We'll review writing semaphore-based algorithms for written assignments and introduce the API for message queues in
+System V Unix, using the example code for a
+<a href="https://github.com/cwru-eecs338/msg_chatbot">chatbot</a>.
+</p>
 <h3>02/21/11: System V Shared Memory and Monitors in Java</h3>
 <p>
 First, we'll review semaphores and introduce the API for shared memory in
