Add link to professor's website

--- a/resources.html
+++ b/resources.html
@@ -19,6 +19,8 @@
                         <td id="nav" valign="top"></td>
                         <td valign="top">
 <dl>
+  <dt><a href="http://art.cwru.edu/338.S12/">Course Website</a> (<a href="338_mirror_02-29-12.tgz">mirror</a>)</dt>
+  <dd>The professor's course website contians numerous examples from previous assignments and links to TA pages from previous years.</dd>
   <dt><a href="http://www.virtualbox.org/">VirtualBox</a></dt>
   <dd>Free, open source virtual machine software, if you want to try a new OS (e.g. Linux) without partitioning or replacing your current OS.</dd>
   <dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a href="http://goto.case.edu/">CWRU Hacker Society</a></dt>
