Move Brian Lauber's slides to repo

--- a/slides.html
+++ b/slides.html
@@ -26,13 +26,13 @@ memory allocation. Review of system calls such as <code>fork()</code>,
 <code>exec()</code>, <code>time()</code>, <code>putenv()</code>, and
 <code>getenv()</code>.
   </dd>
-  <dt><a href="http://vorlon.case.edu/~bml8/338S06/presentations/04Pipes.sxi.pdf">Pipes</a></dt>
+  <dt><a href="slides/04Pipes.sxi.pdf">Pipes</a></dt>
   <dd>
     Introduction to programming with unnamed pipes. Slides by
 <a href="http://vorlon.case.edu/~bml8/338S06/">Brian Lauber</a>.
   </dd>
-  <dt><a href="http://vorlon.case.edu/~bml8/338S06/presentations/05Semaphores.sxi.pdf">Semaphores</a> and
-      <a href="http://vorlon.case.edu/~bml8/338S06/presentations/06SharedMem.sxi.pdf">Shared Memory</a></dt>
+  <dt><a href="slides/05Semaphores.sxi.pdf">Semaphores</a> and
+      <a href="slides/06SharedMem.sxi.pdf">Shared Memory</a></dt>
   <dd>
     More slides from 
 <a href="http://vorlon.case.edu/~bml8/338S06/">Brian Lauber</a>.
