--- a/slides.html
+++ b/slides.html
@@ -29,13 +29,13 @@ memory allocation. Review of system calls such as <code>fork()</code>,
   <dt><a href="slides/04Pipes.sxi.pdf">Pipes</a></dt>
   <dd>
     Introduction to programming with unnamed pipes. Slides by
-<a href="http://vorlon.case.edu/~bml8/338S06/">Brian Lauber</a>.
+<a href="slides/bml8_338S06.tar.bz2">Brian Lauber</a>.
   </dd>
   <dt><a href="slides/05Semaphores.sxi.pdf">Semaphores</a> and
       <a href="slides/06SharedMem.sxi.pdf">Shared Memory</a></dt>
   <dd>
     More slides from 
-<a href="http://vorlon.case.edu/~bml8/338S06/">Brian Lauber</a>.
+<a href="slides/bml8_338S06.tar.bz2">Brian Lauber</a>.
   </dd>
 </dl>
   <dt><a href="https://docs.google.com/present/view?id=dhr6rtvj_191d8bzwpgj">Monitors in Java</a></dt>
