added details for todays recitation
Signed-off-by: Tim Henderson <tim.tadh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ Example using POSIX Semaphores and POSIX Threads Posted
 <a href="https://github.com/cwru-eecs338/PosixExample">here</a>.
 </p>
 -->
+<h3>03/20/12: Homework 4 Prep</h3>
+<p>
+We are going to review homework 4. Talk about what you are going to do and how
+you are going to do it. The assignment sheet is a little unclear, so ask a
+friend if you miss it!
+</p>
 <h3>03/06/12: Midterm Review</h3>
 <p>
 Bring questions.
