Add java thread book to resources

--- a/resources.html
+++ b/resources.html
@@ -30,6 +30,7 @@
     <ul>
     <li><a href="http://proquest.safaribooksonline.com/book/operating-systems-and-server-administration/linux/0130460427">Interprocess Communications in Linux</a></li>
     <li><a href="http://proquest.safaribooksonline.com/0321287630">C Programming</a></li>
+    <li><a href="http://proquest.safaribooksonline.com/book/programming/java/0596007825">Java Threads, Third Edition</a></li>
     </ul>
   </dd>
   <dt><b>Tools</b></dt>
