--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>EECS 338, Spring 2012: Contact Info</title>
+        <title>EECS 338, Spring 2013: Contact Info</title>
         <link href="base-style.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="nav.js"></script>
     </head>
@@ -18,16 +18,16 @@
                     <tr>
                         <td id="nav" valign="top"></td>
                         <td valign="top">
-                          <h3>Gary Doran</h3>
+                          <h3>Eamon Johnson</h3>
                           <dl>
-                            <dt>Email:</dt><dd><a href="mailto:gbd6@case.edu">gbd6@case.edu</a></dd>
-                            <dt>Office Hours:</dt> <dd>Thursday 12:45&#8211;2:00, Olin 406</dd>
+                            <dt>Email:</dt><dd><a href="mailto:ebj8@case.edu">ebj8@case.edu</a></dd>
+                            <dt>Office Hours:</dt> <dd>TBD</dd>
                           </dl>
-                          <h3>Tim Henderson</h3>
+                          <h3>Matthew Ruffalo</h3>
                           <dl>
-                            <dt>Email:</dt><dd><a href="mailto:tah35@case.edu">tah35@case.edu</a></dd>
-                            <dt>Phone:</dt><dd>(614) 296-9964</dd>
-			                      <dt>Office Hours:</dt> <dd>Monday 2:00&#8211;4:00, Olin 406</dd>
+                            <dt>Email:</dt><dd><a href="mailto:mmr15@case.edu">mmr15@case.edu</a></dd>
+                            <!--<dt>Phone:</dt><dd>(614) 296-9964</dd>-->
+			                      <dt>Office Hours:</dt> <dd>TBD</dd>
                           </dl>
                           <h3>IRC</h3>
                           <a href="http://widget.mibbit.com/?server=irc.case.edu&channel=%23eecs338">Check out the #eecs338 channel on irc.case.edu</a>.
