Updated site for spring 2013

--- a/slides.html
+++ b/slides.html
@@ -67,7 +67,8 @@
                 <hr />
                 <p>
                   The slides for this recitation section are based off of presentations given by
-                  previous TAs, namely Brian Lauber, E. Zeynep Erson, and Remo Mueller.
+                  previous TAs: Brian Lauber, E. Zeynep Erson, Remo Mueller, Gary Doran,
+                  and Tim Henderson.
                 </p>
               </td>
             </tr>
