Updated front page w recitation 2 and 3

--- a/index.html
+++ b/index.html
@@ -104,7 +104,20 @@ programming assignments. I reviewed <a href="https://github.com/cwru-eecs338/hel
 <a href="https://github.com/cwru-eecs338/c_basics">a description of some of the basics of C</a> for those of you used
 to Java.</p>
 -->
-<h3>1/22/2013: First Recitation</h3>
+<h3>2/5/2013: Recitation 3</h3>
+<p>
+In the third recitation we discussed three debugging tools: strace, valgrind, and gdb.  To get the most out of valgrind and gdb, add debugging information to your binaries by compiling with gcc using the -g flag.  We discussed the concept of pipes and reviewed a <a href="https://github.com/cwru-eecs338/mario_pipe">a simple pipe example</a> using pipes for interprocess communication, and <a href="https://github.com/cwru-eecs338/pipes">an example of duplicating pipe file descriptors</a> to redirect stdin and stdout.  You will need to understand all these concepts to complete Assignment 2.
+</p>
+
+
+
+<h3>1/29/2013: Recitation 2</h3>
+<p>
+Recitation 2 was an introduction to C highlighting the differences from Java.  We touched on the compiler (gcc), GNU Make and Makefiles, organization of C code.  We also discussed two examples: first, <a href="https://github.com/cwru-eecs338/hello_syscalls">system calls from the assembler up</a>; second, <a href="https://github.com/cwru-eecs338/fork_and_exec">how to use fork() and exec()<a/>.
+</p>
+
+
+<h3>1/22/2013: Recitation 1</h3>
 <p>
 The first recitiation was an <a href="intro.html">introduction to Linux</a>, which will be used for the programming assignments.  We discussed the manual (man) system, and how to use to the manual to find information on system calls.
 </p>
