recitation index page updates for 20130219

--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@ programming assignments. I reviewed <a href="https://github.com/cwru-eecs338/hel
 <a href="https://github.com/cwru-eecs338/c_basics">a description of some of the basics of C</a> for those of you used
 to Java.</p>
 -->
+<h3>2/17/2013: Recitation 5</h3>
+<p>
+We discussed the System V APIs for semaphores and shared memory.  Slides for semaphores are <a href="http://cwru-eecs338.github.com/slides/05Semaphores.sxi.pdf">here</a>.  Slides for shared memory are <a href="http://cwru-eecs338.github.com/slides/06SharedMem.sxi.pdf">here</a>.  We saw these APIs in action with a solution to the producer-consumer problem.  Two resources for further learning:
+<ul>
+<li><a href="http://www.greenteapress.com/semaphores/">The Little Book of Semaphores</a>  (warning: the syntax in this book may not conform 100% to the structures presented in class)</li>
+<li><a href="http://www.amazon.com/Interprocess-Communications-Linux-Nooks-Crannies/dp/0130460427">Interprocess Communications in Linux</a></li>
+</ul>
+</p>
+<h3>2/12/2013: Recitiation 4</h3>
+<p>
+MMR reviewed approaches to assingment 2.
+</p>
 <h3>2/5/2013: Recitation 3</h3>
 <p>
 In the third recitation we discussed three debugging tools: strace, valgrind, and gdb.  To get the most out of valgrind and gdb, add debugging information to your binaries by compiling with gcc using the -g flag.  We discussed the concept of pipes and reviewed a <a href="https://github.com/cwru-eecs338/mario_pipe">a simple pipe example</a> using pipes for interprocess communication, and <a href="https://github.com/cwru-eecs338/pipes">an example of duplicating pipe file descriptors</a> to redirect stdin and stdout.  You will need to understand all these concepts to complete Assignment 2.
