Updated recitation homepage for 2/26.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@ programming assignments. I reviewed <a href="https://github.com/cwru-eecs338/hel
 <a href="https://github.com/cwru-eecs338/c_basics">a description of some of the basics of C</a> for those of you used
 to Java.</p>
 -->
+<h3>2/26/2013: Recitation 6</h3>
+We examined the Java implementation of monitors and a <a href="https://github.com/cwru-eecs338/java_monitors">Java solution to the dining philosophers problem</a>.  Then we spent some time reviewing material for the midterm, including example problems and how to structure an answer to a concurrent algorithm analysis problem.
 <h3>2/17/2013: Recitation 5</h3>
 <p>
 We discussed the System V APIs for semaphores and shared memory.  Slides for semaphores are <a href="http://cwru-eecs338.github.com/slides/05Semaphores.sxi.pdf">here</a>.  Slides for shared memory are <a href="http://cwru-eecs338.github.com/slides/06SharedMem.sxi.pdf">here</a>.  We saw these APIs in action with a solution to the producer-consumer problem.  Two resources for further learning:
@@ -114,7 +116,7 @@ We discussed the System V APIs for semaphores and shared memory.  Slides for sem
 </p>
 <h3>2/12/2013: Recitiation 4</h3>
 <p>
-MMR reviewed approaches to assingment 2.
+MMR reviewed approaches to assignment 2.
 </p>
 <h3>2/5/2013: Recitation 3</h3>
 <p>
