updated recitation index page to reflect material discussed 3/5/2013

--- a/index.html
+++ b/index.html
@@ -104,8 +104,12 @@ programming assignments. I reviewed <a href="https://github.com/cwru-eecs338/hel
 <a href="https://github.com/cwru-eecs338/c_basics">a description of some of the basics of C</a> for those of you used
 to Java.</p>
 -->
+<h3>3/5/2013: Recitation 7</h3>
+In the seventh recitation we discussed the concept of threads, and we looked at an overview of the <a href="https://docs.google.com/present/view?id=d37b66n_4d93jp2g5">POSIX threads and POSIX semaphore APIs</a> as well as a brief <a href="https://github.com/cwru-eecs338/PosixExample">code example showing the use of these POSIX APIs</a>.  Note that the error checking in the POSIX code example is not sufficient because it does not check for the conditions defined on the man page -- copy and paste at your own risk!  We revisited the System V semaphore API and saw <a href="https://docs.google.com/present/view?id=d37b66n_5c85qskgc">how to write wrappers for the semaphore wait() and signal() operations</a> to abstract away the complexity of the System V API.
 <h3>2/26/2013: Recitation 6</h3>
+<p>
 We examined the Java implementation of monitors and a <a href="https://github.com/cwru-eecs338/java_monitors">Java solution to the dining philosophers problem</a>.  Then we spent some time reviewing material for the midterm, including example problems and how to structure an answer to a concurrent algorithm analysis problem.
+<p>
 <h3>2/17/2013: Recitation 5</h3>
 <p>
 We discussed the System V APIs for semaphores and shared memory.  Slides for semaphores are <a href="http://cwru-eecs338.github.com/slides/05Semaphores.sxi.pdf">here</a>.  Slides for shared memory are <a href="http://cwru-eecs338.github.com/slides/06SharedMem.sxi.pdf">here</a>.  We saw these APIs in action with a solution to the producer-consumer problem.  Two resources for further learning:
